--- a/templates/customers.template.html
+++ b/templates/customers.template.html
@@ -3,5 +3,21 @@
 {% block content %}
 
 <h1>Customer List</h1>
-{{customers}}
+<table class="table">
+    <thead>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+        </tr>
+    </thead>
+    {% for c in customers %}
+    <tr>
+        <td>{{c.first_name}}</td>
+        <td>{{c.last_name}}</td>
+        <td>{{c.email}}</td>
+    </tr>
+    {% endfor %}
+</table>
+
 {% endblock %}
