--- a/templates/customers.template.html
+++ b/templates/customers.template.html
@@ -16,7 +16,10 @@
         <td>{{c.first_name}}</td>
         <td>{{c.last_name}}</td>
         <td>{{c.email}}</td>
-        <td><a href="{{ url_for('show_edit_customer', customer_id=c.id) }}">Edit</a></td>
+        <td>
+            <a href="{{ url_for('show_edit_customer', customer_id=c.id) }}">Edit</a>
+            <a href="{{ url_for('show_delete_customer', customer_id=c.id)}}" class="btn btn-danger btn-sm">Delete</a>
+        </td>
     </tr>
     {% endfor %}
 </table>
